force-app/main/default/objects/ssot__BuyerIntent__dlm/fields/ssot__BuyerIntent_LeadId_map_Lead_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__BuyerIntent_LeadId_map_Lead_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BuyerIntent_LeadId_map_Lead_Id_N_1</label>
    <referenceTo>ssot__Lead__dlm</referenceTo>
    <relationshipLabel>BuyerIntent_LeadId_map_Lead_Id_N_1</relationshipLabel>
    <relationshipName>BuyerIntent_LeadId_map_Lead_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>