force-app/main/default/objects/ssot__BuyerIntent__dlm/fields/ssot__IsTrending__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsTrending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Trending</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsTrending</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>