force-app/main/default/objects/ssot__BuyerIntent__dlm/fields/ssot__PeopleResearchingCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PeopleResearchingCount__c</fullName>
    <label>People Researching Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PeopleResearchingCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>