force-app/main/default/objects/ssot__BuyerIntent__dlm/fields/ssot__rel_1720290996147_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720290996147_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BuyerIntent_LastModifiedById_map_Use_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>BuyerIntent_LastModifiedById_map_Use_rel</relationshipLabel>
    <relationshipName>rel_1720290996147_end</relationshipName>
    <type>Lookup</type>
</CustomField>