force-app/main/default/objects/ssot__BuyerIntent__dlm/fields/ssot__TrendDaysNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TrendDaysNumber__c</fullName>
    <label>Trending Days Number</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TrendDaysNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>