force-app/main/default/objects/ssot__BuyerIntent__dlm/fields/ssot__TrendingScoreNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__TrendingScoreNumber__c</fullName>
    <label>Trending Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TrendingScoreNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>